APPCLUSTER-stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS CloudFormation template to deploy a Docker container on Amazon ECS using Fargate.

Parameters:
  ALBInboundPort:
    Type: Number
  AppContainerPort:
    Type: Number
  DBPort:
    Type: Number

Resources:
  DemoECSCluster:
    Type: AWS::ECS::Cluster
    Properties: 
      ClusterName: !Sub ${AWS::StackName}-FargateCluster
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ECSCluster

  DemoALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${AWS::StackName}-ALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSG
      Subnets:
        - !ImportValue ALBSubnet1
        - !ImportValue ALBSubnet2
      Type: application
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-LB

  HTTPListeronALB:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref DemoALB
      Protocol: HTTP
      Port: !Ref ALBInboundPort
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref DefaultTargetGroup

  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the ALB.
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ALBSG

  ALBSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the ALB SG to allow web traffic (HTTP).
      GroupId: !Ref ALBSG
      IpProtocol: tcp
      FromPort: !Ref ALBInboundPort
      ToPort: !Ref ALBInboundPort
      CidrIp: 0.0.0.0/0

  ALBSGEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ALB SG to allow traffic out to FargateSG.
      GroupId: !Ref ALBSG
      IpProtocol: tcp
      FromPort: !Ref AppContainerPort
      ToPort: !Ref AppContainerPort
      DestinationSecurityGroupId: !Ref FargateTaskSG
 
  DefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${AWS::StackName}-DefaultTargetGroup
      Port: !Ref AppContainerPort
      Protocol: HTTP
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-defaultTargetGroup

  VPCInterfaceEndpointsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECR VPC Endpoints.
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCEndpointsSG 

  VPCInterfaceEndpointsSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the VPCInterfaceEndpointsSG to allow inbound traffic on port 443 from ECS Fargate security group.
      GroupId: !Ref VPCInterfaceEndpointsSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref FargateTaskSG

  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS MySQL.
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-RDSSG

  RDSSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule for the RDSSG to allow traffic from the Fargate task security group on port 3306.
      GroupId: !Ref RDSSG
      IpProtocol: tcp
      FromPort: !Ref DBPort
      ToPort: !Ref DBPort
      SourceSecurityGroupId: !Ref FargateTaskSG

  VPCInterfaceEndpointECRDKR:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      PrivateDnsEnabled: true
      VpcId: !ImportValue VPC
      SubnetIds:
        - !ImportValue FargateSubnet1
        - !ImportValue FargateSubnet2
      SecurityGroupIds: 
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointDKR

  VPCInterfaceEndpointECRAPI:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      PrivateDnsEnabled: true
      VpcId: !ImportValue VPC
      SubnetIds:
        - !ImportValue FargateSubnet1
        - !ImportValue FargateSubnet2
      SecurityGroupIds:
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointAPI

  VPCInterfaceEndpointCWLogs:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      PrivateDnsEnabled: 'true'
      VpcId: !ImportValue VPC
      SubnetIds: 
        - !ImportValue FargateSubnet1
        - !ImportValue FargateSubnet2
      SecurityGroupIds:
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointCWLogs 

  VPCInterfaceEndpointSSM:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      PrivateDnsEnabled: 'true'
      VpcId: !ImportValue VPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      SubnetIds:
        - !ImportValue FargateSubnet1
        - !ImportValue FargateSubnet2
      SecurityGroupIds:
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointSSM 

  DemoECR:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub ${AWS::StackName}-ecrrepo
      EmptyOnDelete: 'true'
      RepositoryPolicyText:
        Version: 2012-10-17
        Statement: 
          - 
            Sid: AllowPullandPushImagesonECR
            Effect: Allow
            Principal: 
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
            Action:
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
              - ecr:BatchCheckLayerAvailability
              - ecr:PutImage
              - ecr:CompleteLayerUpload
              - ecr:UploadLayerPart
              - ecr:InitiateLayerUpload
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ECR

  FargateTaskSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECS Fargate tasks.
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FargateTaskSG

  FargateTaskSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the ECS Fargate tasks SG to allow inbound traffic from the ALB.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: !Ref AppContainerPort
      ToPort: !Ref AppContainerPort
      SourceSecurityGroupId: !Ref ALBSG

  FargateTaskSGEgressToRDS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ECS Fargate tasks SG to allow outbound traffic from the FargateTaskSG to RDS on port 3306.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: !Ref DBPort
      ToPort: !Ref DBPort
      DestinationSecurityGroupId: !Ref RDSSG

  FargateTaskSGEgressToVPCInterfaceEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ECS Fargate tasks SG to allow outbound traffic from the FargateTaskSG to VPCInterfaceEndpointSG on port 443.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref VPCInterfaceEndpointsSG

  FargateTaskSGEgressToS3GatewayEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on Fargate SG to allow traffic to S3 via Prefix List on port 443.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443 
      DestinationPrefixListId: !ImportValue PrefixListId

  ECSTaskLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub ${AWS::StackName}-ECSTaskLogGroup
      RetentionInDays: 1

  LambdaLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/${AWS::StackName}-LambdaLogGroup
      RetentionInDays: 1

Outputs:
  Cluster:
    Description: ECS Cluster
    Value: !Ref DemoECSCluster
    Export:
      Name: ECSCluster

  Listener:
    Description: Listener on port 80
    Value: !Ref HTTPListeronALB
    Export:
      Name: Listener

  FargateSecurityGroup:
    Description: Fargate Security Group
    Value: !Ref FargateTaskSG
    Export:
      Name: FargateTaskSG

  RDSSecurityGroup:
    Description: RDS Security Group
    Value: !Ref RDSSG
    Export:
      Name: RDSSG

  LoadBalancerDNS:
    Description: LoadBalancerDNSName
    Value: !GetAtt DemoALB.DNSName
    Export:
      Name: DomainName

  ECSLogGroup:
    Description: CloudWatch Log Group for ECS Task
    Value: !GetAtt ECSTaskLogGroup.Arn
    Export:
      Name: ECSTaskLogGroup

  LambdaLogGroup:
    Description: CloudWatch Log Group for Lambda
    Value: !GetAtt LambdaLogGroup.Arn
    Export:
      Name: LambdaLogGroup

  DKRVPCEndpoint:
    Description: VPC Endpoint for Docker
    Value: !Ref VPCInterfaceEndpointECRDKR
    Export:
      Name: VPCInterfaceEndpointECRDKR

  APIVPCEndpoint:
    Description: VPC Endpoint for ECRAPI Calls
    Value: !Ref VPCInterfaceEndpointECRAPI
    Export:
      Name: VPCInterfaceEndpointECRAPI

  CWVPCEndpoint:
    Description: VPC Endpoint for CloudWatch Calls
    Value: !Ref VPCInterfaceEndpointCWLogs
    Export:
      Name: VPCInterfaceEndpointCWLogs

  SSMVPCEndpoint:
    Description: VPC Endpoint for SSM parameters
    Value: !Ref VPCInterfaceEndpointSSM
    Export:
      Name: VPCInterfaceEndpointSSM

  ECRURI:
    Description: ECR Repo
    Value: !GetAtt DemoECR.RepositoryUri
    Export:
      Name: ECRURI

  ECRArn:
    Description: ECR Repo
    Value: !GetAtt DemoECR.Arn
    Export:
      Name: ECRArn
