Docker to ECS on Fargate Infrastructure.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS CloudFormation template to deploy a Docker container on Amazon ECS using Fargate.

Parameters:
  VPCCIDR:
    Type: String
  SubnetCount:
    Type: Number
  SubnetBits:
    Type: Number
  ECSCluster1:
    Type: String
  ECRregistry:
    Type: String
  ALBInboundPort:
    Type: Number
  AppContainerPort:
    Type: Number
  DBPort:
    Type: Number

Resources:
  DemoVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC

  DemoIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-IGW

  DemoIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref DemoIGW
      VpcId: !Ref DemoVPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name 
          Value: !Sub ${AWS::StackName}-RouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: DemoIGWAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref DemoIGW
      DestinationCidrBlock: 0.0.0.0/0

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateRouteTable1
  
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateRouteTable2

  ALBSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DemoVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ALBSubnet1

  ALBSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref ALBSubnet1
      RouteTableId: !Ref PublicRouteTable
   
  ALBSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DemoVPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ALBSubnet2

  ALBSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref ALBSubnet2
      RouteTableId: !Ref PublicRouteTable 

  FargateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      VpcId: !Ref DemoVPC
      AvailabilityZone : !Select [ 0, !GetAZs '' ]
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FargateSubnet1

  FargateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref FargateSubnet1
      RouteTableId: !Ref PrivateRouteTable1 

  FargateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DemoVPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Select [ 3, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FargateSubnet2

  FargateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref FargateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  RDSSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DemoVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Select [ 4, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}-RDSSubnet1

  RDSSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref RDSSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  RDSSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DemoVPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Select [ 5, !Cidr [ !GetAtt DemoVPC.CidrBlock, !Ref SubnetCount, !Ref SubnetBits ] ]
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}-RDSSubnet2

  RDSSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref RDSSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the ALB.
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ALBSG

  ALBSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the ALB SG to allow web traffic (HTTP).
      GroupId: !Ref ALBSG
      IpProtocol: tcp
      FromPort: !Ref ALBInboundPort
      ToPort: !Ref ALBInboundPort
      CidrIp: 0.0.0.0/0

  ALBSGEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ALB SG to allow traffic out to FargateSG.
      GroupId: !Ref ALBSG
      IpProtocol: tcp
      FromPort: !Ref AppContainerPort
      ToPort: !Ref AppContainerPort
      DestinationSecurityGroupId: !Ref FargateTaskSG
  
  FargateTaskSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECS Fargate tasks.
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FargateTaskSG

  FargateTaskSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the ECS Fargate tasks SG to allow inbound traffic from the ALB.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: !Ref AppContainerPort
      ToPort: !Ref AppContainerPort
      SourceSecurityGroupId: !Ref ALBSG

  FargateTaskSGEgressToRDS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ECS Fargate tasks SG to allow outbound traffic from the FargateTaskSG to RDS on port 3306.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: !Ref DBPort
      ToPort: !Ref DBPort
      DestinationSecurityGroupId: !Ref RDSSG

  FargateTaskSGEgressToVPCInterfaceEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on the ECS Fargate tasks SG to allow outbound traffic from the FargateTaskSG to VPCInterfaceEndpointSG on port 443.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref VPCInterfaceEndpointsSG

  FargateTaskSGEgressToS3GatewayEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Outbound rule on Fargate SG to allow traffic to S3 via Prefix List on port 443.
      GroupId: !Ref FargateTaskSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443 
      DestinationPrefixListId: !GetAtt VPCS3GWEndpoint.PrefixListId

  VPCInterfaceEndpointsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECR VPC Endpoints.
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCEndpointsSG 

  VPCInterfaceEndpointsSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule on the VPCInterfaceEndpointsSG to allow inbound traffic on port 443 from ECS Fargate security group.
      GroupId: !Ref VPCInterfaceEndpointsSG
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref FargateTaskSG

  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS MySQL.
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-RDSSG

  RDSSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound rule for the RDSSG to allow traffic from the Fargate task security group on port 3306.
      GroupId: !Ref RDSSG
      IpProtocol: tcp
      FromPort: !Ref DBPort
      ToPort: !Ref DBPort
      SourceSecurityGroupId: !Ref FargateTaskSG

  VPCInterfaceEndpointECRDKR:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      PrivateDnsEnabled: true
      VpcId: !Ref DemoVPC
      SubnetIds:
        - !Ref FargateSubnet1
        - !Ref FargateSubnet2
      SecurityGroupIds: 
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointDKR

  VPCInterfaceEndpointECRAPI:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      PrivateDnsEnabled: true
      VpcId: !Ref DemoVPC
      SubnetIds:
        - FargateSubnet1
        - FargateSubnet2
      SecurityGroupIds:
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointAPI

  VPCInterfaceEndpointCWLogs:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      PrivateDnsEnabled: true
      VpcId: !Ref DemoVPC
      SubnetIds: 
        - !Ref FargateSubnet1
        - !Ref FargateSubnet2
      SecurityGroupIds:
        - !Ref VPCInterfaceEndpointsSG
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCInterfaceEndpointCWLogs 

  VPCS3GWEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Gateway
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref DemoVPC
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - s3.GetObject
            Resource:
              - !Sub arn:aws:s3:::prod-${AWS::Region}-starport-layer-bucket/*
      RouteTableIds:
        - !Ref PrivateRouteTable1
        - !Ref PrivateRouteTable2
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPCS3GatewayEndpoint
